Mod users.jsx and batch form overlap issue

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -72,6 +72,7 @@ div .menubutton {
   margin: 0;
   line-height: 1.15;
   font-size: 2rem;
+  margin-bottom: 1em;
 }
 
 .subtitlestudent {
